@@ -118,6 +118,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #22274: In the subprocess module, allow stderr to be redirected to
+  stdout even when stdout is not redirected.  Patch by Akira Li.
+
 - Issue #25745: Fixed leaking a userptr in curses panel destructor.
 
 - Issue #26977: Removed unnecessary, and ignored, call to sum of squares helper
